# rspack-sources

core/: Cargo.toml
core/benches/: bench.rs
core/examples/: basic.rs
core/src/: cached_source.rs  concat_source.rs  lib.rs  original_source.rs  raw_source.rs  source.rs  source_map_source.rs
core/tests/: concat.rs
dev/bench/: data.js
src/: helpers.rs  original_source.rs  replace_source.rs  rope.rs
