[package]
description = "rspack sources"
edition = "2021"
license = "MIT"
name = "rspack_sources"
repository = "https://github.com/speedy-js/rspack-sources"
version = "0.0.3"

[features]
defualt = []
concurrent = []

[dependencies]
parcel_sourcemap = { git = "https://github.com/ahabhgk/parcel-source-map.git", branch = "from_json", features = [
  "json",
] }
tracing = "0.1"
base64-simd = "0.7"

[dev-dependencies]
once_cell = "1"
tracing-chrome = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1"
